--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-crud-operation",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vedprakashjangid.github.io/CRUD-in-React/",
+  "homepage": "https://vedprakashjangid.github.io/CRUD-in-React",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
